--- a/templates/integration/user/login.html
+++ b/templates/integration/user/login.html
@@ -1,155 +1,79 @@
-{#{% extends "integration/layout/base.html" %}#}
-{##}
-{#{% block content %}#}
-{#    <div class="card">#}
-{#        <div class="card-header">#}
-{#            Login#}
-{#        </div>#}
-{#        <div class="card-block">#}
-{#            <form method="post" action="{% url "user.login" %}">#}
-{#                <div class="form-group">#}
-{#                    <label for="username">Username:</label>#}
-{#                    <input name="username" type="text" class="form-control" id="username">#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="pwd">Password:</label>#}
-{#                    <input name="password" type="password" class="form-control" id="pwd">#}
-{#                </div>#}
-{#                <div class="form-check">#}
-{#                    <label class="form-check-label">#}
-{#                        <input class="form-check-input" type="checkbox"> Remember me#}
-{#                    </label>#}
-{#                </div>#}
-{#                {% csrf_token %}#}
-{#                <button type="submit" class="btn btn-primary">Submit</button>#}
-{#            </form>#}
-{#        </div>#}
-{#    </div>#}
-{#{% endblock %}#}
-
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <head>
-    <meta charset="UTF-8">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <title>Title</title>
-    <style>
-        @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sufee Admin - HTML5 Admin Template</title>
+    <meta name="description" content="Sufee Admin - HTML5 Admin Template">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
-}
-.form {
-  position: relative;
-  z-index: 1;
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-.form .register-form {
-  display: none;
-}
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-.container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-.container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
-body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-    </style>
+    <link rel="apple-touch-icon" href="apple-icon.png">
+    <link rel="shortcut icon" href="favicon.ico">
+
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/normalize.css">
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/flag-icon.min.css">
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/css/cs-skin-elastic.css">
+    <!-- <link rel="stylesheet" href="assets/css/bootstrap-select.less"> -->
+    <link rel="stylesheet" href="/static/sufee-dashboard/assets/scss/style.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+
 </head>
-<body>
-<div class="login-page">
-  <div class="form">
-    <form class="login-form"  method="post" action="{% url "user.login" %}">
-        {% csrf_token %}
-      <input type="text" name="username" placeholder="username"/>
-      <input type="password" name="password" placeholder="password"/>
-        <input type="submit" value="login"/>
-      
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
-  </div>
-</div>
+<body class="bg-dark">
+
+
+    <div class="sufee-login d-flex align-content-center flex-wrap">
+        <div class="container">
+            <div class="login-content">
+                <div class="login-logo">
+                    <a href="index.html">
+                        <img class="align-content" src="/static/sufee-dashboard/images/logo.png" alt="">
+                    </a>
+                </div>
+                <div class="login-form">
+                    <form action="{% url "user.login" %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label>Email address</label>
+                            <input type="text" class="form-control" name="username" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control" name="password" placeholder="Password">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> Remember Me
+                            </label>
+                            <label class="pull-right">
+                                <a href="#">Forgotten Password?</a>
+                            </label>
+
+                        </div>
+                        <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                        <div class="register-link m-t-15 text-center">
+                            <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="/static/sufee-dashboard/assets/js/vendor/jquery-2.1.4.min.js"></script>
+    <script src="/static/sufee-dashboard/assets/js/popper.min.js"></script>
+    <script src="/static/sufee-dashboard/assets/js/plugins.js"></script>
+    <script src="/static/sufee-dashboard/assets/js/main.js"></script>
+
+
 </body>
 </html>
