Change the view of class room index

--- a/templates/integration/class/index.html
+++ b/templates/integration/class/index.html
@@ -1,71 +1,101 @@
-{% extends "integration/layout/base.html" %}
-{% block content %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Classroom Name</th>
-            <th>Display ID</th>
-            <th>Teacher Name Layout</th>
-            <th>Subject Name Layout</th>
-            <th>Classroom scheduling</th>
-            <th>Thesis presentation scheduling</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for class_room in class_rooms %}
-            <tr>
-                <td>{{ class_room.id }}</td>
-                <td>{{ class_room.name }}</td>
-                <td>{{ class_room.display_id }}</td>
-                <td>{{ class_room.teacher_name_widget.widget_id }} {{ class_room.teacher_name_widget.name }}</td>
-                <td>{{ class_room.subject_name_widget.widget_id }} {{ class_room.subject_name_widget.name }}</td>
-                <td>
-                    <a href="{% url 'classroom.class_id' class_room.id %}">
-                        <button class="btn btn-primary btn-md">Schedule</button>
-                    </a>
-                </td>
-                <td>
-                    <a href="{% url 'thesis.class_id' class_room.id %}">
-                        <button class="btn btn-primary btn-md">Schedule</button>
-                    </a>
-                </td>
-            </tr>
-        {% endfor %}
-        <tr>
-            <form method="post" action="{% url 'classroom.index' %}">
-                {% csrf_token %}
-                <td></td>
-                <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="classroom-name"
-                           name="classroom-name"
-                           placeholder="Classroom name"></td>
-                <td>
-                    <select class="form-control" name="display-id">
-                        {% for display in displays %}
-                            <option value="{{ display.display_id }}">{{ display.display_id }} {{ display.display }}</option>
-                        {% endfor %}
-                    </select>
-                </td>
-                <td>
-                    <select class="form-control" name="teacher-name-widget">
-                        {% for teacher_name_widget in teacher_name_widgets %}
-                            <option value="{{ teacher_name_widget.widget_id }}">{{ teacher_name_widget.widget_id }} - {{ teacher_name_widget.name }}({{ teacher_name_widget.type }})</option>
-                        {% endfor %}
-                    </select>
-                </td>
-                <td>
-                    <select class="form-control" name="subject-name-widget">
-                        {% for subject_name_widget in subject_name_widgets %}
-                            <option value="{{ subject_name_widget.widget_id }}">{{ subject_name_widget.widget_id }} - {{ subject_name_widget.name }}({{ subject_name_widget.type }})</option>
-                        {% endfor %}
-                    </select>
-                </td>
-                <td>
-                    <button type="submit" class="btn btn-success btn-lg">Add</button>
-                </td>
-            </form>
-        </tr>
+{#{% extends "integration/layout/base.html" %}#}
+{#{% block content %}#}
+{#    <table class="table">#}
+{#        <thead>#}
+{#        <tr>#}
+{#            <th>ID</th>#}
+{#            <th>Classroom Name</th>#}
+{#            <th>Display ID</th>#}
+{#            <th>Teacher Name Layout</th>#}
+{#            <th>Subject Name Layout</th>#}
+{#            <th>Classroom scheduling</th>#}
+{#            <th>Thesis presentation scheduling</th>#}
+{#        </tr>#}
+{#        </thead>#}
+{#        <tbody>#}
+{#        {% for class_room in class_rooms %}#}
+{#            <tr>#}
+{#                <td>{{ class_room.id }}</td>#}
+{#                <td>{{ class_room.name }}</td>#}
+{#                <td>{{ class_room.display_id }}</td>#}
+{#                <td>{{ class_room.teacher_name_widget.widget_id }} {{ class_room.teacher_name_widget.name }}</td>#}
+{#                <td>{{ class_room.subject_name_widget.widget_id }} {{ class_room.subject_name_widget.name }}</td>#}
+{#                <td>#}
+{#                    <a href="{% url 'classroom.class_id' class_room.id %}">#}
+{#                        <button class="btn btn-primary btn-md">Schedule</button>#}
+{#                    </a>#}
+{#                </td>#}
+{#                <td>#}
+{#                    <a href="{% url 'thesis.class_id' class_room.id %}">#}
+{#                        <button class="btn btn-primary btn-md">Schedule</button>#}
+{#                    </a>#}
+{#                </td>#}
+{#            </tr>#}
+{#        {% endfor %}#}
+{#        <tr>#}
+{#            <form method="post" action="{% url 'classroom.index' %}">#}
+{#                {% csrf_token %}#}
+{#                <td></td>#}
+{#                <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="classroom-name"#}
+{#                           name="classroom-name"#}
+{#                           placeholder="Classroom name"></td>#}
+{#                <td>#}
+{#                    <select class="form-control" name="display-id">#}
+{#                        {% for display in displays %}#}
+{#                            <option value="{{ display.display_id }}">{{ display.display_id }} {{ display.display }}</option>#}
+{#                        {% endfor %}#}
+{#                    </select>#}
+{#                </td>#}
+{#                <td>#}
+{#                    <select class="form-control" name="teacher-name-widget">#}
+{#                        {% for teacher_name_widget in teacher_name_widgets %}#}
+{#                            <option value="{{ teacher_name_widget.widget_id }}">{{ teacher_name_widget.widget_id }} - {{ teacher_name_widget.name }}({{ teacher_name_widget.type }})</option>#}
+{#                        {% endfor %}#}
+{#                    </select>#}
+{#                </td>#}
+{#                <td>#}
+{#                    <select class="form-control" name="subject-name-widget">#}
+{#                        {% for subject_name_widget in subject_name_widgets %}#}
+{#                            <option value="{{ subject_name_widget.widget_id }}">{{ subject_name_widget.widget_id }} - {{ subject_name_widget.name }}({{ subject_name_widget.type }})</option>#}
+{#                        {% endfor %}#}
+{#                    </select>#}
+{#                </td>#}
+{#                <td>#}
+{#                    <button type="submit" class="btn btn-success btn-lg">Add</button>#}
+{#                </td>#}
+{#            </form>#}
+{#        </tr>#}
+{##}
+{#        </tbody>#}
+{#    </table>#}
+{#{% endblock %}#}
 
-        </tbody>
-    </table>
+{% extends "integration/layout/template.html" %}
+{% block pagetitle %}
+    Teaching Class Scheduling
+{% endblock %}
+{% block content %}
+    <div class="animated fadeIn">
+        <div class="row">
+            {% for class_display in class_displays %}
+                <div class="col-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="clearfix">
+                                <i class="fa fa-laptop bg-info p-3 font-2xl mr-3 float-left text-light"></i>
+                                <div class="h5 text-secondary mb-0 mt-1">{{ class_display.alias }}</div>
+                                <div class="text-muted text-uppercase font-weight-bold font-xs small">{{ class_display.display }}</div>
+                            </div>
+                            <div class="b-b-1 pt-3"></div>
+                            <hr>
+                            <div class="more-info pt-2" style="margin-bottom:-10px;">
+                                <a class="font-weight-bold font-xs btn-block text-muted small" href="{% url "classroom.class_id" class_display.display_id %}">Set Schedule <i
+                                        class="fa fa-angle-right float-right font-lg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--/.col-->
+            {% endfor %}
+        </div><!-- .row -->
+    </div><!-- .animated -->
 {% endblock %}
