Adding menu item

--- a/templates/integration/layout/template.html
+++ b/templates/integration/layout/template.html
@@ -90,11 +90,20 @@
 
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                       aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Icons</a>
+                       aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Scheduling</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="font-fontawesome.html">Font Awesome</a>
+                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="{% url "classroom.index" %}">Teaching Class</a>
                         </li>
-                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Themefy Icons</a></li>
+                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Propagation </a></li>
+                    </ul>
+                </li>
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Propagation</a>
+                    <ul class="sub-menu children dropdown-menu">
+                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="">Teaching Class</a>
+                        </li>
+                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Propagation </a></li>
                     </ul>
                 </li>
                 <li>
