Adding link to teaching class template

--- a/templates/integration/layout/template.html
+++ b/templates/integration/layout/template.html
@@ -70,7 +70,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Template Editor</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-puzzle-piece"></i><a href="ui-buttons.html">Graduate Presentation</a></li>
+                        <li><i class="fa fa-puzzle-piece"></i><a href="{% url "template.teaching" %}">Teaching Class</a></li>
                         <li><i class="fa fa-puzzle-piece"></i><a href="{% url "classroom.index" %}">Class</a></li>
                     </ul>
                 </li>
