--- a/templates/integration/layout/template.html
+++ b/templates/integration/layout/template.html
@@ -40,7 +40,9 @@
     <script src="/static/sufee-dashboard/assets/js/lib/vector-map/jquery.vmap.min.js"></script>
     <script src="/static/sufee-dashboard/assets/js/lib/vector-map/jquery.vmap.sampledata.js"></script>
     <script src="/static/sufee-dashboard/assets/js/lib/vector-map/country/jquery.vmap.world.js"></script>
+    {% block head_segment %}{% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 <body>
 
